--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,20 @@ header img{
 header a{
     font-size: 1rem; 
     text-decoration: none; 
-    color: #242321;}
+    color: #242321;
+    }
+
+.nav-link:hover{
+    color: #e09a0e;
+    text-decoration: underline;
+} 
+
+.navbar-nav .nav-link.active {
+    color: #e09a0e;
+}
+/*.nav-link.active{
+    color: #e09a0e;  
+}*/
 
 /*Estilos main*/
 
