--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ footer{
 
     /*contenido principal*/
     .contenedor-welcome {margin-left: 10px;
-    row-gap: 10px;}
+    }
     .contenedor-grid {
         grid-template-areas: 
         "img1"
@@ -292,7 +292,7 @@ footer{
         "img10";
         grid-template-columns: 95%;
         grid-template-rows: repeat(10,280px);
-        row-gap: 10px;
+        row-gap: 30px;
     }
     .contenedor-grid-logo {
         grid-template-areas: 
@@ -300,7 +300,7 @@ footer{
         "img2";
         grid-template-columns: 95%;
         grid-template-rows: repeat(2,280px);
-        row-gap: 10px;
+        row-gap: 30px;
     }
     .contenedor-grid-packaging {
         grid-template-areas: 
@@ -312,7 +312,7 @@ footer{
         "img6";
         grid-template-columns: 95%;
         grid-template-rows: repeat(6,280px);
-        row-gap: 10px;
+        row-gap: 30px;
     }
     .contenedor-grid-print {
         grid-template-areas: 
@@ -320,13 +320,12 @@ footer{
         "img2";
         grid-template-columns: 95%;
         grid-template-rows: repeat(2,280px);
-        row-gap: 10px;
+        row-gap: 30px;
     }
     .contenedor-main{
         width: 95%;
         margin: 10px auto;
         text-align: center;
-        row-gap: 10px;
     }
     .contenedor-main img{
         margin: 5px 0;
