--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -4,8 +4,14 @@
 
 .titulo-about{
     margin: 30px 0 10px 0;
+    h1{font-size: 1.5rem;}
 }
 
 .subtitulo-about{
     margin-bottom: 30px;
+    h2{font-size: 1rem;}
+
+}
+.footer-main{
+    h3{font-size: 1.5rem;}
 }
